app-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: store-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048-deployment
  namespace: store-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
        - name: game-2048-container
          image: mitchisalive/2048-web:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: game-2048-service
  namespace: store-ns
spec:
  selector:
    app: game-2048
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
